# zexe

./: Cargo.toml  WORKSPACE.bazel
algebra/: BUILD.bazel  Cargo.toml
algebra-benches/: BUILD.bazel  Cargo.toml
algebra-core/: BUILD.bazel  Cargo.toml
algebra-core/algebra-core-derive/: BUILD.bazel
algebra-core/field-assembly/: BUILD.bazel
algebra-core/mince/: BUILD.bazel
bzl/raze/: Cargo.toml  crates.bzl
bzl/raze/cargo/: BUILD.bazel
bzl/raze/remote/: BUILD.alga-0.9.3.bazel  BUILD.approx-0.3.2.bazel  BUILD.atty-0.2.14.bazel  BUILD.autocfg-0.1.7.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.blake2-0.8.1.bazel  BUILD.bstr-0.2.15.bazel  BUILD.bumpalo-3.6.1.bazel  BUILD.byte-tools-0.3.1.bazel  BUILD.byteorder-1.4.2.bazel  BUILD.cast-0.2.3.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-2.33.3.bazel  BUILD.colored-2.0.0.bazel  BUILD.criterion-0.3.4.bazel  BUILD.criterion-plot-0.4.3.bazel  BUILD.crossbeam-channel-0.5.0.bazel  BUILD.crossbeam-deque-0.7.3.bazel  BUILD.crossbeam-deque-0.8.0.bazel  BUILD.crossbeam-epoch-0.8.2.bazel  BUILD.crossbeam-epoch-0.9.3.bazel  BUILD.crossbeam-utils-0.7.2.bazel  BUILD.crossbeam-utils-0.8.3.bazel  BUILD.crypto-mac-0.7.0.bazel  BUILD.csv-1.1.5.bazel  BUILD.csv-core-0.1.10.bazel  BUILD.cty-0.2.1.bazel  BUILD.derivative-2.1.1.bazel  BUILD.digest-0.8.1.bazel  BUILD.either-1.6.1.bazel  BUILD.endian-type-0.1.2.bazel  BUILD.generic-array-0.12.4.bazel  BUILD.getrandom-0.2.2.bazel  BUILD.half-1.7.1.bazel  BUILD.hermit-abi-0.1.18.bazel  BUILD.itertools-0.10.0.bazel  BUILD.itertools-0.9.0.bazel  BUILD.itoa-0.4.7.bazel  (+82 more)
cp-benches/: Cargo.toml
crypto-primitives/: BUILD.bazel  Cargo.toml
dpc/: BUILD.bazel  Cargo.toml
ff-fft/: BUILD.bazel  Cargo.toml
ff-fft-benches/: Cargo.toml
gm17/: BUILD.bazel  Cargo.toml
groth16/: BUILD.bazel  Cargo.toml
groupmap/: BUILD.bazel  Cargo.toml
r1cs-core/: BUILD.bazel  Cargo.toml
r1cs-std/: BUILD.bazel  Cargo.toml
snarky-bn382/: BUILD.bazel  Cargo.toml
