[package]
name = "algebra-core"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for finite fields and elliptic curves"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"

################################# Dependencies ################################

[dependencies]
algebra-core-derive = { path = "algebra-core-derive", optional = true }
derivative = { version = "2.1.1", features = ["use_core"] }
num-traits = { version = "0.2.11", default-features = false }
ocaml = { version = "0.18.1", optional = true }  # 0.18.1
rand = { version = "0.8.3" }
rayon = { version = "1.3.1", optional = true }
unroll = "0.1.4"

[build-dependencies]
field-assembly = { path = "./field-assembly" }
rustc_version = "0.2"

[dev-dependencies]
rand_xorshift = "0.2"

[features]
default = [ "std", "parallel" ]
std = []
parallel = [ "std", "rayon" ]
derive = [ "algebra-core-derive" ]
llvm_asm = []
ocaml_types = [ "ocaml" ]

################################################################
# [package.metadata.raze.crates.rustc_version.'0.2']
# # additional_deps = [@{gen_workspace_prefix}__{dep_name}__{dep_version_sanitized}/:{dep_name}]
# additional_deps = ["zexe__rustc_version__0_2_3/:rustc_version"]


# [package.metadata.raze.crates.ocaml.'0.18.1']
# # ocaml = {git = "https://github.com/zshipko/ocaml-rs", version="0.20.0", optional=true}
# ocaml = { version = "0.18.1", optional = true }

# [package.metadata.raze.crates.ocaml.'0.18.1']
# extra_aliased_targets = ["ocaml"]
# gen_buildrs = true

# [package.metadata.raze.crates.ocaml-sys.'0.19.0']
# additional_env = {"OCAMLOPT"= "ocamlopt"}
