load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    edition = "2018",
    name = "crypto-primitives",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = ["//bzl/raze/cargo:derivative"],
    deps = [
        "//algebra-core",
        "//bench-utils",
        "//ff-fft",
        "//gm17",
        "//groth16",
        "//r1cs-core",
        "//r1cs-std",

        "//bzl/raze/cargo:digest",
        "//bzl/raze/cargo:blake2",
        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:rayon",
    ],
    crate_features = [
        "std",
        "r1cs",
        # "r1cs-core",
        # "r1cs-std",
        # "gm17",
        # "parallel",
        # "use_core"
    ]
)

rust_library(
    name = "dpc",
    edition = "2018",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = ["//bzl/raze/cargo:derivative"],
    deps = [
        "//algebra-core",
        "//bench-utils",
        "//ff-fft",
        "//gm17",
        "//groth16",
        "//r1cs-core",
        "//r1cs-std",

        "//bzl/raze/cargo:digest",
        "//bzl/raze/cargo:blake2",
        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:rayon",
    ],
    crate_features = [
        "std",
        "r1cs",
        "gm17",
    ]
)
