load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "dpc",
    edition = "2018",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = [
        "//raze/cargo:derivative",
    ],
    aliases = {
        "//algebra:dpc": "algebra",
        "//crypto-primitives:dpc" : "crypto_primitives",
        "//r1cs-std:dpc" : "r1cs_std"
    },
    deps = [
        "//algebra:dpc",
        "//r1cs-core",
        "//r1cs-std:dpc",
        "//crypto-primitives:dpc",
        "//gm17",
        "//bench-utils",

        "//raze/cargo:rand",
    ],
    crate_features = [
        "bls12_377",
        "edwards_bls12",
        "edwards_sw6",
        "sw6"
    ]
)
