load(
    "@rules_rust//rust:rust.bzl",
    "rust_library",
)

rust_library(
    name = "algebra-core-derive",
    visibility = ["//visibility:public"],
    crate_type = "proc-macro",
    edition = "2018",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//bzl/raze/cargo:proc_macro2",
        "//bzl/raze/cargo:syn",
        "//bzl/raze/cargo:quote",
        # "//algebra-core/algebra-core-derive/cargo:proc_macro2",
        # "//algebra-core/algebra-core-derive/cargo:syn",
        # "//algebra-core/algebra-core-derive/cargo:quote",
    ],
)

