load(
    "@rules_rust//rust:rust.bzl",
    "rust_library",
    "rust_binary",
    "rust_test",
)

rust_library(
    name = "mince",
    visibility = ["//visibility:public"],
    crate_type = "proc-macro",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//bzl/raze/cargo:quote",
        "//bzl/raze/cargo:syn",
        # "//algebra-core/mince/cargo:quote",
        # "//algebra-core/mince/cargo:syn",
    ],
)

